    - Upgraded to ANTLR 3.1.3
    - [ 1859477 ] Dynamically loaded ServletFilters like PyServlet
  Bugs Fixed
    - [ 1366 ] parsing of lamda expression fails
    - [ 1365 ] continuation lines fail in interactive interpreter
    - [ 1377 ] Event names shadowed by a field name on Java types leads to a NPE
    - [ 1381 ] Redundant declarations of interface implementation hides overriden methods

Jython 2.5.0
  The same as rc4.

Jython 2.5.0 rc4
  Bugs fixed
    - [ 1354 ] core language failures in interactive interpreter
    - [ 1358 ] Simple program fails to parse in Jython 2.5rc3, but parses OK with CPython
    - [ 1357 ] no sys.executable when script runner is a relative link
    - [ 1338 ] Comparing Java objects to each other fails when classes of values do not match
    - [ 1363 ] Deep inheritance from a Java class causes MRO problems
    - [ 1333 ] attribute wrongly deemed 'write-only' if setter comes from an interface
    - [ 1364 ] SimpleHTTPServer.py contains call to missing os.fstat
    - [ 1367 ] PIpes (popen2) do not flush their buffer
    - [ 1368 ] '\xe4'.decode('utf-8') does not raise UnicodeDecodeError but returns u''
    - [ 1372 ] No default drive in Windows file paths
    - Fix file's repr with Windows paths
    - Fix urllib and urllib2 path handling on Windows
    - Fix r'\Jython25' not considered an abspath on Windows
    - Fix handling of raw unicode escapes
    - Fix mishandling of the bytecode's tagged mtime in zipimport and when
    recompiling due to stale bytecode
    - Fixed minor short term memory leaks in functions on some lists allocated
    inline
    - Updated imp.APIVersion to 23 as some compiler changes occured since the
    last update.

Jython 2.5.0 rc3
  Bugs fixed
    - [ 1344 ] setName semantics of threading.Thread different to CPython
    - Fixed JLine console on cygwin
    - [ 1348 ] muti-threaded issue, maybe threads cannot exit

Jython 2.5.0 a0 - rc2
  Bugs fixed (new numbering due to move to Roundup)